--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap-icons": "^1.6.1",
     "katex": "^0.13.20",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-katex": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-to-print": "^2.14.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
