--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "katex": "^0.13.20",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
+    "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-katex": "^2.0.2",
     "react-router-dom": "^5.3.0",
