--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "bootstrap-icons": "^1.6.1",
+    "clipboard": "^2.0.8",
     "katex": "^0.13.20",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
