--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "animate.css": "^4.1.1",
     "bootstrap-icons": "^1.6.1",
     "katex": "^0.13.20",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
     "react-datepicker": "^4.3.0",
