--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "bootstrap-icons": "^1.6.1",
+    "clipboard": "^2.0.8",
     "katex": "^0.13.20",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.6.1",
+    "react-component-export-image": "^1.0.6",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-katex": "^2.0.2",
